--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,31 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 24px;
-	font-weight: 400;
-
-	color: rgba(255, 255, 255, 0.87);
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
-}
-
-html {
-	@apply h-full;
-	@apply text-white;
-	@apply bg-slate-900;
-}
 body {
-	@apply h-full;
+    overflow: hidden;
 }
-div#__next {
-	@apply h-full;
+
+@keyframes enter {
+    from {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
-main {
-	@apply h-full;
+
+@keyframes exit {
+    from {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateX(100px);
+    }
 }
- */
+
+.exit {
+    animation: exit 0.5s ease forwards;
+}
+
+.enter {
+    animation: enter 0.5s ease forwards;
+}
